首页焦点图的动效修改

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -163,7 +163,7 @@
             </li>
             <li>
                 <label>项目申报</label>
-                <p>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。 </p>
+                <p>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。 </p>
             </li>
         </ul>
     </section>
@@ -185,7 +185,8 @@
                     <strong class="tip">倾心打造四大核心业务</strong>
                 </span>
                 </figcaption>
-                <p>悉心调研分析各行特性，精准掌握数高等教育系统、加工制造类、贸易进出口、 科技通讯、通信、现代制药、化工、食品、工程建设、电子商务等行业商业模式及业务流程闭环。
+                <p>
+                    悉心调研分析各行特性，精准掌握传统制造、高端设备、建筑工程、 交通运输、生物医药、光电通信、高等院校、服饰纺织、食品饮料、农林牧渔等行业商业模式，及业务流程闭环。
                 </p>
             </figure>
         </section>
