--- a/src/html/aboutUs/wzCulture.html
+++ b/src/html/aboutUs/wzCulture.html
@@ -120,8 +120,8 @@
         <label><i>CULTURE</i>维正</label>
         <h3>文化</h3>
         <section class="text">
-            <strong class="tip">全方位的知识产权战略服务</strong>
-            <p> 维正集团有着一群重合作、永奋斗、常分享的有志青年，我们遵循唯一不变的是变化，永远不把挣钱作为第一目标，客户第一、员工第二、公司第三，不追求超额的利润、不追求暴力四项基本原则。把做全中国最专业的知识产权链公司作为发展目标，怀着做一家受人尊敬的百年企业的愿景，为客户创造最大价值的真诚和永远不变的追求与信仰，坚持不懈的拓展、创新。</p>
+            <strong class="tip">提升全天下企业的核心竞争力！</strong>
+            <p> 维正集团有着一群重合作、永奋斗、常分享的有志青年，我们遵循唯一不变的是变化，永远不把挣钱作为第一目标，客户第一、员工第二、公司第三，不追求超额的利润、不追求暴利四项基本原则。把做全中国最专业的知识产权链公司作为发展目标，怀着做一家受人尊敬的百年企业的愿景，为客户创造最大的价值</p>
         </section>
     </section>
 </section>
