--- a/src/html/cases/index.html
+++ b/src/html/cases/index.html
@@ -109,14 +109,14 @@
                     <h3>传统制造类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
-                <p> 制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业强基攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
-                <p>
+                <p> 制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业的基础强化攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
+                </p>
                 <p>
                     <label> 案例回放——</label>
-                    2015年，BOE（京东方）年新增专利申请量6156件，其中发明专利超过80%，累计可使用专利超过40000件，位居全球业内前列。2016年上半年，BOE（京东方）新增专利申请量突破4000件，同比增长25%，继续保持业内第一。这就是维正集团的服务客户。如此强大的专利等知识产权储备量基础上，依然选择和维正集团合作，这就是对维正专业能力、服务能力的双双认可。助力全天下企业提高核心竞争力是维正的使命，促进行业更进一步发展是维正的责任，维正定当不负众望拼搏前行。
+                    2015年，BOE（京东方）年新增专利申请量6156件，其中发明专利超过80%，累计可使用专利超过40000件，位居全球业内前列。2016年上半年，BOE（京东方）新增专利申请量突破4000件，同比增长25%，继续保持业内第一。这就是维正集团的服务客户。在如此大的知识产权储备量基础上，依然选择和维正集团合作，这就是对维正专业能力、服务能力的双双认可。助力全天下企业提高核心竞争力是维正的使命，促进行业更进一步发展是维正的责任，维正定当不负众望拼搏前行。
                 </p>
             </section>
         </section>
@@ -157,11 +157,11 @@
                     <h3>高端设备类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
-                    “十二五”期间，航空装备、卫星及应用、轨道交通装备、海洋工程装备和智能制造等高端设备带来的高附加值进一步显现。大力培育和发展高端装备制造业，是提升我国产业核心竞争力的必然要求，对于加快转变经济发展方式、实现由制造业大国向强国转变具有重要战略意义。维正集团的客户，自然离不开高端装备类企业。</p>
+                    “十二五”期间，航空装备、卫星设备、轨道交通装备、海洋工程装备和智能制造等高端设备带来的高附加值进一步显现。大力培育和发展高端装备制造业，是提升我国产业核心竞争力的必然要求，对于加快转变经济发展方式、实现由制造业大国向强国转变具有重要战略意义。维正集团的客户，自然离不开高端装备类企业。</p>
                 <p>
                     <label>案例回放——</label>
                     中央管理的国有特大型企业中国航空工业集团公司、亚洲最大的注塑机生产企业海天集团等等都是维正集团服务对象。维正以专业能力和服务水平征服了客户，各类工程师不定期到客户企业进行专业沟通和交流，提供更专业化、针对性的服务，受到了客户的认可和信赖。众多关系国家命脉的高端设备类企业成为维正集团的客户，这是维正集团的荣耀，更是应该肩负起的使命和责任。
@@ -205,7 +205,7 @@
                     <h3>建筑工程类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -254,7 +254,7 @@
                     <h3>交通运输类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -301,7 +301,7 @@
                     <h3>生物医药类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -349,7 +349,7 @@
                     <h3>光电通信类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -397,7 +397,7 @@
                     <h3>高等院校类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -445,7 +445,7 @@
                     <h3>服饰纺织类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
@@ -493,7 +493,7 @@
                     <h3>食品饮料类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>民以食为天，知识产权始终贯穿食品行业创新与发展的始终。食品企业在满足消费者食品需求的同时，怎样提高品牌影响、扩大市场占有率，与商标、专利、著作权在内的知识产权占有情况有着千丝万缕的关联。</p>
@@ -540,7 +540,7 @@
                     <h3>农林牧渔类</h3>
                     <span>
                     <label>成功案例</label>
-                    <sub>这里象征着我们的态度和能力。</sub>
+                    <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
                 <p>
