--- a/src/html/index.html
+++ b/src/html/index.html
@@ -97,8 +97,8 @@
 </header>
 
 <!--SLIDE-->
-<section id="slider" class="slider">
-    <ul>
+<section class="focusWrap">
+    <ul class="rslides" id="focus">
         <li>
             <a href="aboutUs/index.html">
                 <img class="sliderimg" src="../img/focusImg/slide1.jpg" alt="">
@@ -166,7 +166,7 @@
                             <a href="servicePro/projectApplication.html" class="icon-E" title="项目申报"></a>
                         </span>
                         <strong>项目申报</strong>
-                        <P>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。 </P>
+                        <P>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。</P>
                     </div>
                 </li>
             </ul>
@@ -735,6 +735,7 @@
 </footer>
 
 <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="../js/plugins/responsiveslides.min.js"></script>
 <script src="../js/plugins/unslider.min.js"></script>
 <script src="../js/public.js"></script>
 <script src="../js/common.js"></script>
