--- a/src/html/servicePro/brandRegist.html
+++ b/src/html/servicePro/brandRegist.html
@@ -145,7 +145,7 @@
                     </ol>
                     <dl>
                         <dt>品牌创建</dt>
-                        <dd>区别商品或服务出处｜引导消费者认品牌消费习惯｜商业影响力至关重要</dd>
+                        <dd>区别商品或服务出处｜引导消费者认品牌的消费习惯｜商业影响力至关重要</dd>
                         <dt>品牌保护</dt>
                         <dd>有利于保护公司无形资产｜避免行业恶性竞争｜防止同类企业侵权</dd>
                         <dt>必备资质</dt>
