--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -172,24 +172,21 @@
                     <em></em>
                     <label>商业价值</label>
                     <p>
-                        专利作为一种无形资产，本身就具有一 定的价值。按照新《公司法》规定，专 利等企业无形资产可作为注册资本，可 占注册资本的比例最高达到70%;其次， 可以作价入股、质押贷款。而且，专利
-                        的价值能够吸引风险投资，增强投资商 的信心。好的专利能够体现一个技术项 目的科技含量、新颖性、成长性等，增 强投资者对项目的信心。
+                        专利作为一种无形资产，本身就具有一定的价值。按照新《公司法》规定，专利等企业无形资产可作为注册资本，可占注册资本的比例最高达到70%;其次，可以作价入股、质押贷款。而且，专利的价值能够吸引风险投资，增强投资商的信心。好的专利能够体现一个技术项目的科技含量、新颖性、成长性等，增强投资者对项目的信心。
                     </p>
                 </li>
                 <li>
                     <em></em>
                     <label>权利保护</label>
                     <p>
-                        专利的垄断性所带来的价值体现。专 利的两个最基本的特征就是"独占"与" 公开"，以"公开"换取"独占"是专利制 度最基本的核心，这分别代表了权利 与义务的两面。"独占"是指法律授予
-                        技术发明人在一段时间内享有排他性 的独占权利，即具有一定的垄断性。
+                        专利的垄断性所带来的价值体现。专利的两个最基本的特征就是"独占"与" 公开"，以"公开"换取"独占"是专利制度最基本的核心，这分别代表了权利与义务的两面。"独占"是指法律授予技术发明人在一段时间内享有排他性的独占权利，即具有一定的垄断性。
                     </p>
                 </li>
                 <li>
                     <em></em>
                     <label>政府奖励</label>
                     <p>
-                        各地方政府均出台相应的政策的文件， 对于专利申请进行奖励，（以实际情 况为准）；财政部、工信部 出台对于 研发费用的补助；各地每年均举行专 利评奖活动，对于获奖的专利权人均
-                        有一定的奖励；对于职务发明的人员： 《专利法实施细则》第77条和78条明 文规定，单位应给予发明人或设计人 一定额度的奖金。
+                        各地方政府均出台相应的政策的文件，对于专利申请进行奖励，（以实际情 况为准）；财政部、工信部出台对于研发费用的补助；各地每年均举行专利评奖活动，对于获奖的专利权人均有一定的奖励；对于职务发明的人员：《专利法实施细则》第77条和78条明文规定，单位应给予发明人或设计人一定额度的奖金。
                     </p>
                 </li>
                 <li>
