--- a/src/html/servicePro/projectApplication.html
+++ b/src/html/servicePro/projectApplication.html
@@ -32,7 +32,7 @@
                 <h3><a href="../index.html">网站首页</a></h3>
             </li>
             <li>
-                <h3><a href="../servicePro/index.html">服务项目</a></h3>
+                <h3 class="active"><a href="../servicePro/index.html">服务项目</a></h3>
                 <ul class="sub">
                     <li><a href="../servicePro/index.html"> 专利咨询</a></li>
                     <li><a href="brandRegist.html"> 商标注册</a></li>
@@ -120,7 +120,7 @@
                 项目申报
                 <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>深入了解客户的经营发展需求，精准把握各省、市、区项目申报操作流程，以实力确保项目申报高成功率。</p>
+            <p>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。</p>
         </figure>
         <img src="../../img/earth4.png" alt="" class="earth">
     </section>
@@ -149,7 +149,7 @@
                 <li>
                     <em>4</em>
                     <label>政策资金倾斜</label>
-                    <p>土地、电力、排污、节 能、科研资金、税收等各项扶持政策</p>
+                    <p>土地、电力、排污、节 能、科研资金、税收等各项扶持政策。</p>
                 </li>
                 <li>
                     <em>5</em>
@@ -167,27 +167,28 @@
             <ol class="significance">
                 <li>
                     <em>1</em>
-                    <p> 高企所得税减免40%，同时可享受办理研发经费加计扣除。</p>
+                    <p>加大对企业的政策扶持，推动大众创业、万众创新促进经济升级发展</p>
                 </li>
                 <li>
                     <em>2</em>
-                    <p> 地区对新认定的高新技术企业资助均会高于5万元以上。</p>
+                    <p>享受国家、省、市有关优惠政策，获得各级政府部门的科研经费支持和财政拨款，以及获得政府工业用地审批优先权。
+                    </p>
                 </li>
                 <li>
                     <em>3</em>
-                    <p>吸引政策和资金扶持，推动企业产业化扩张，促进企业融资上市。</p>
+                    <p>享受国家优惠税收政策，企业所得税由原来的25％将为15%。</p>
                 </li>
                 <li>
                     <em>4</em>
-                    <p>土地、电力、排污、节 能、科研资金、税收等各项扶持政策</p>
+                    <p>研发费用加计扣除，固定资产加速折旧。符合条件 的高新技术转让所得免征 企业所得税。</p>
                 </li>
                 <li>
                     <em>5</em>
-                    <p>政府帮企业背书，大大提高了企业品牌知名度。</p>
+                    <p>提高企业核心竞争力，提升企业品牌形象，助力于广告宣传和产品招投标工程。</p>
                 </li>
                 <li>
                     <em>6</em>
-                    <p>政府帮企业背书，大大提高了企业品牌知名度。</p>
+                    <p>国家级资质认证，对依靠科技立身的企业更是不可或缺的硬招牌。</p>
                 </li>
             </ol>
         </section>
