--- a/src/html/servicePro/copyright.html
+++ b/src/html/servicePro/copyright.html
@@ -137,21 +137,21 @@
         <section class="container box">
             <figure>
                 <figcaption>宣传</figcaption>
-                <p>通过登记机构的定期公告， 可以向社会宣传自己的产品.</p>
+                <p>通过登记机构的定期公告，可以向社会宣传自己的产品.</p>
             </figure>
             <figure>
                 <figcaption>保护</figcaption>
-                <p>在发生著作权争议时，《作品登记证书》 是主张权利的有力武器，同时是向人民法 院提起诉讼请求
+                <p>在发生著作权争议时，《作品登记证书》是主张权利的有力武器，同时是向人民法院提起诉讼请求
                 </p>
             </figure>
             <figure>
                 <figcaption>荣誉</figcaption>
-                <p>《作品登记证书》是您水平的客观反映， 国家权威部门对您能力的认可将使您在 求职应聘时更加自信。
+                <p>《作品登记证书》是您水平的客观反映， 国家权威部门对您能力的认可将使您在求职应聘时更加自信。
                 </p>
             </figure>
             <figure>
                 <figcaption>福利</figcaption>
-                <p>企业申请是办理双软认定、 高新技术企业认定得前提， 可以享受国家税收优惠政策。
+                <p>企业申请是办理双软认定、 高新技术企业认定的前提，可以享受国家税收优惠政策。
                 </p>
             </figure>
         </section>
