1.banner图替换 2.文案修改

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -143,7 +143,7 @@
                 <strong class="tip">倾心打造四大核心业务</strong>
             </span>
         </figcaption>
-        <p>紧扣知识产权大时代背景，承载多年在知识产权领域的丰富经验，依托人才精英团队，打造专利、 商标、版权、项目申报、维权诉讼五大核心业务，旨于提升全天下企业的核心竞争力！
+        <p>紧扣知识产权大时代背景，承载多年在知识产权领域的丰富经验，依托人才精英团队，打造专利服务、商标服务、版权服务、项目申报、维权诉讼五大核心业务，旨于提升全天下企业的核心竞争力！
         </p>
     </figure>
     
@@ -182,7 +182,7 @@
                     <h3>行业经验</h3>
                     <span>
                     <sup>PROFILE</sup>
-                    <strong class="tip">倾心打造四大核心业务</strong>
+                    <strong class="tip">专业成就客户所托</strong>
                 </span>
                 </figcaption>
                 <p>
