--- a/src/html/aboutUs/wzCulture.html
+++ b/src/html/aboutUs/wzCulture.html
@@ -121,7 +121,8 @@
         <h3>文化</h3>
         <section class="text">
             <strong class="tip">提升全天下企业的核心竞争力！</strong>
-            <p> 维正集团有着一群重合作、永奋斗、常分享的有志青年，我们遵循唯一不变的是变化，永远不把挣钱作为第一目标，客户第一、员工第二、公司第三，不追求超额的利润、不追求暴利四项基本原则。把做全中国最专业的知识产权链公司作为发展目标，怀着做一家受人尊敬的百年企业的愿景，为客户创造最大的价值</p>
+            <p>
+                维正集团有着一群重合作、永奋斗、常分享的有志青年，我们遵循唯一不变的是变化，永远不把赚钱作为第一目标，客户第一、员工第二、公司第三，永不谋求暴利四项基本原则。把做全中国最专业的知识产权链公司作为发展目标，怀着做一家受人尊敬的百年企业的愿景，为客户创造最大的价值</p>
         </section>
     </section>
 </section>
@@ -148,21 +149,28 @@
             </td>
         </tr>
         <tr>
-            <td>
-                <section><label>维正的执行</label>
-                    <p>一流的计划加三流的执行永远比不上三流的计划加一流的执行</p></section>
+            <td colspan="6">
+                <table>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <section><label>四项基本原则</label>
+                                <p>唯一不变的是变化<br/>永远不把赚钱作为第一目标<br/>客户第一、员工第二、公司第三<br/>不追求超额的利润，永不谋求暴利</p></section>
+                        </td>
+                        <td><img src="../../img/culture4.png" alt=""></td>
+                        <td>
+                            <section><label>维正的拼搏</label>
+                                <p>不断自我激励、自我完善、寻求突破</p></section>
+                        </td>
+                        <td ><img src="../../img/culture6.png" alt=""></td>
+                        <td>
+                            <section><label>维正的愿景</label>
+                                <p>做一家受人尊敬的百年企业 </p></section>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </td>
-            <td><img src="../../img/culture4.png" alt=""></td>
-            <td>
-                <section><label>维正的拼搏</label>
-                    <p>不断自我激励、自我完善、寻求突破</p></section>
-            </td>
-            <td><img src="../../img/culture5.png" alt=""></td>
-            <td>
-                <section><label>维正的愿景</label>
-                    <p>做一家受人尊敬的百年企业 </p></section>
-            </td>
-            <td><img src="../../img/culture6.png" alt=""></td>
         </tr>
         </tbody>
     </table>
