--- a/src/html/index.html
+++ b/src/html/index.html
@@ -97,7 +97,7 @@
 </header>
 
 <!--SLIDE-->
-<section class="focusWrap">
+<section class="focusWrap slider clearfix">
     <ul class="rslides" id="focus">
         <li>
             <a href="aboutUs/index.html">
