1.首页案例部分添加小分辨率媒体查询 2.部分文案修改

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -33,9 +33,9 @@
             <li>
                 <h3><a href="../servicePro/index.html">服务项目</a></h3>
                 <ul class="sub">
-                    <li><a href="../servicePro/index.html"> 专利咨询</a></li>
-                    <li><a href="../servicePro/brandRegist.html"> 商标注册</a></li>
-                    <li><a href="../servicePro/copyright.html"> 版权登记</a></li>
+                    <li><a href="../servicePro/index.html">专利服务</a></li>
+                    <li><a href="../servicePro/brandRegist.html">商标服务</a></li>
+                    <li><a href="../servicePro/copyright.html">版权服务</a></li>
                     <li><a href="../servicePro/projectApplication.html"> 项目申报</a></li>
                 </ul>
             </li>
@@ -99,7 +99,7 @@
     <section class="container clearfix">
         <section class="currentMode fl">
             <h4> ABOUT <i>US</i></h4>
-            <span><b>关于我们</b><strong>这里象征着我们的态度和能力</strong></span>
+            <span><b>关于我们</b><strong>这里象征着我们的态度和实力</strong></span>
         </section>
         <menu class="tab fr">
             <ul>
@@ -127,7 +127,7 @@
         基于提升全天下企业核心竞争力这一崇高使命而成立的维正集团，自成立之初就明确肩负的行业和社会责任。全体维正人为了达成做受人尊敬的百年维正发展愿景一直兢兢业业，殚精竭虑。维正的业务不止包含专利服务、商标服务、项目申报等，现已扩展升级到维权诉讼、交易等知识产权产业链式服务。维正集团厚积薄发全力打造的傻鸟知服网在2016年已经正式上线，未来将借助这一平台实现知识产权线上服务全覆盖，为客户带去更优质的服务，以最终成果促进知识产权行业的再次变革。
     </p>
     <p class="text">
-        在知识产权事业发展道路上，维正人一直以高标准，严要求的工匠精神，专研专业知识，提高各方面服务水平，为客户带去最大附加值的专业服务。维正专业团队员工专业知识涵盖医药、化学、生物、通讯、能源、建筑等多个领域，且通过在工作中不断积累和学习，不断扩大专利代理人队伍。专利代理人考试100%的通过率，以数据见证维正团队的实力和水平，这一人数还在持续增加中。
+        在知识产权事业发展道路上，维正人一直以高标准，严要求的工匠精神，专研专业知识，提高各方面服务水平，为客户带去最大附加值的专业服务。维正专业团队员工专业知识涵盖医药、化学、生物、通讯、能源、建筑等多个领域，且通过在工作中不断积累和学习，不断扩大专利代理人队伍。专利代理人考试100%的通过率，以数据见证维正团队的能力和水平，这一人数还在持续增加中。
     </p>
     <p class="text">
         维正服务的几万名客户是我们过去努力付出和收获成绩的见证，也是维正不懈努力的力量之源。现有众多线下服务团队还在不断扩张中，傻鸟知服网又将综合线上线下服务优势，带来知识产权行业发展再次变革。
@@ -217,9 +217,12 @@
 <!--SideBar-->
 <aside id="sideBar">
     <ul>
-        <li><em class="icon-qq"></em><span><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span></li>
+        <li><em class="icon-qq"></em><span><a target="_blank"
+                                              href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes">QQ咨询</a> </span>
+        </li>
         <li><em class="icon-tel"></em><span>400-6063708</span></li>
-        <li><em class="icon-wechat"></em><p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
+        <li><em class="icon-wechat"></em>
+            <p class="qrImg"><img src="../../img/qrcode.png" alt=""></p></li>
         <li><em class="icon-backtop"></em></li>
     </ul>
 </aside>
@@ -264,9 +267,11 @@
     <section class="btm-contact">
         <ul>
             <li><a href="../foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
-            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a></li>
+            <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
+            </li>
             <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
-            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span></li>
+            <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../../img/qrcode.png"></span>
+            </li>
         </ul>
     </section>
     <p class="text-center copyright">Copyright &copy;2016 维正知识产权代理有限公司 版权所有 浙ICP备13035314号</p>
