--- a/src/html/aboutUs/wzCulture.html
+++ b/src/html/aboutUs/wzCulture.html
@@ -101,7 +101,7 @@
     <section class="container clearfix">
         <section class="currentMode fl">
             <h4> ABOUT <i>US</i></h4>
-            <span><b>关于我们</b><strong>这里象征着我们的态度和能力</strong></span>
+            <span><b>关于我们</b><strong>这里象征着我们的态度和实力</strong></span>
         </section>
         <menu class="tab fr">
             <ul>
@@ -159,10 +159,11 @@
                         </td>
                         <td><img src="../../img/culture4.png" alt=""></td>
                         <td>
-                            <section><label>维正的拼搏</label>
-                                <p>不断自我激励、自我完善、寻求突破</p></section>
+                            <section class="text-center">
+                                <label><span>我们</span><small>的</small><span>文化</span></label>
+                            </section>
                         </td>
-                        <td ><img src="../../img/culture6.png" alt=""></td>
+                        <td><img src="../../img/culture6.png" alt=""></td>
                         <td>
                             <section><label>维正的愿景</label>
                                 <p>做一家受人尊敬的百年企业 </p></section>
