--- a/src/html/cases/index.html
+++ b/src/html/cases/index.html
@@ -112,7 +112,7 @@
                     <sub>这里象征着我们的态度和实力。</sub>
                 </span>
                 </header>
-                <p> 制造业基础能力提升是我国从工业大国迈向工业强国的战略基石，工业的基础强化攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
+                <p> 制造业基础能力自主提升是我国从工业大国迈向工业强国的战略基石，工业的基础强化攸关工业自主创新能力建设以及核心竞争力提升等各个方面。
                 </p>
                 <p>
                     <label> 案例回放——</label>
