--- a/src/html/index.html
+++ b/src/html/index.html
@@ -196,7 +196,7 @@
                 <a href="#">
                     <section class="viewImg">
                         <time>10<span>10月</span></time>
-                        <img src="../img/focusImg/slide1.png" alt="">
+                        <img src="../img/focusImg/slide1.jpg" alt="">
                     </section>
                     <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
                     <p>2016年10月8日，20多位维正新人在桑达科技大厦度过了一个难忘的下午，感受维正文化、在温馨的环境下学习产品知识，新……</p>
@@ -207,7 +207,7 @@
                     <a href="#">
                         <section class="viewImg">
                             <time>10<span>10月</span></time>
-                            <img src="../img/focusImg/slide1.png" alt="">
+                            <img src="../img/focusImg/slide1.jpg" alt="">
                         </section>
                         <section class="box">
                             <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
@@ -219,7 +219,7 @@
                     <a href="#">
                         <section class="viewImg">
                             <time>10<span>10月</span></time>
-                            <img src="../img/focusImg/slide1.png" alt="">
+                            <img src="../img/focusImg/slide1.jpg" alt="">
                         </section>
                         <section class="box">
                             <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
@@ -231,7 +231,7 @@
                     <a href="#">
                         <section class="viewImg">
                             <time>10<span>10月</span></time>
-                            <img src="../img/focusImg/slide1.png" alt="">
+                            <img src="../img/focusImg/slide1.jpg" alt="">
                         </section>
                         <section class="box">
                             <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
@@ -243,7 +243,7 @@
                     <a href="#">
                         <section class="viewImg">
                             <time>10<span>10月</span></time>
-                            <img src="../img/focusImg/slide1.png" alt="">
+                            <img src="../img/focusImg/slide1.jpg" alt="">
                         </section>
                         <section class="box">
                             <h5>【维正迎新日】一波生猛优秀的新面孔新气象铺面而来！ </h5>
