--- a/src/html/aboutUs/wzTeam-1.html
+++ b/src/html/aboutUs/wzTeam-1.html
@@ -99,7 +99,7 @@
     <section class="container clearfix">
         <section class="currentMode fl">
             <h4> ABOUT <i>US</i></h4>
-            <span><b>关于我们</b><strong>这里象征着我们的态度和能力</strong></span>
+            <span><b>关于我们</b><strong>这里象征着我们的态度和实力</strong></span>
         </section>
         <menu class="tab fr">
             <ul>
