部分文案修改

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -124,14 +124,22 @@
         </figcaption>
     </figure>
     <p class="text">
-        基于提升全天下企业核心竞争力这一崇高使命而成立的维正集团，自成立之初就明确肩负的行业和社会责任。全体维正人为了达成做受人尊敬的百年维正发展愿景一直兢兢业业，殚精竭虑。维正的业务不止包含专利服务、商标服务、项目申报等，现已扩展升级到维权诉讼、交易等知识产权产业链式服务。维正集团厚积薄发全力打造的傻鸟知服网在2016年已经正式上线，未来将借助这一平台实现知识产权线上服务全覆盖，为客户带去更优质的服务，以最终成果促进知识产权行业的再次变革。
+        截止2016年12月15号，维正知识产权旗下拥有：15家线下知识产权公司、2家律师事务所、1个互联网线上平台、2个微信公众号、1600多名维正人。我们遍布全国13个城市，服务企事业单位超30000多家。
     </p>
     <p class="text">
-        在知识产权事业发展道路上，维正人一直以高标准，严要求的工匠精神，专研专业知识，提高各方面服务水平，为客户带去最大附加值的专业服务。维正专业团队员工专业知识涵盖医药、化学、生物、通讯、能源、建筑等多个领域，且通过在工作中不断积累和学习，不断扩大专利代理人队伍。专利代理人考试100%的通过率，以数据见证维正团队的能力和水平，这一人数还在持续增加中。
+        1600多名维正人=500多名知识产权顾问人员+260多名专利代理人员+230多名商标版权代理人员+180多名政府项目申报人员+60多名客服人员+110多名流程人员+50多名执业律师+50多名资深IT人员+80多名后勤人员+30多名知识产权运营人员。
     </p>
-    <p class="text">
-        维正服务的几万名客户是我们过去努力付出和收获成绩的见证，也是维正不懈努力的力量之源。现有众多线下服务团队还在不断扩张中，傻鸟知服网又将综合线上线下服务优势，带来知识产权行业发展再次变革。
-    </p>
+    <dl class="list-text">
+        <dt>我们的十大成绩：</dt>
+        <dd>1.发明专利授权率达到93%，远高于全国授权率48%；</dd>
+        <dd>2.实用新型专利和外观专利授权率均为100%，远高于全国授权率62%；</dd>
+        <dd>3.国内商标授权率达到91%，远高于全国授权率42%；</dd>
+        <dd>4.国内版权和计算机软件著作权的授权率均为100%，远高于全国授权率74%；</dd>
+        <dd>5.涉外商标授权率在96%，涉外专利授权量92%；</dd>
+        <dd>6.累计辅助3400多家企业完成了26000多件专利、商标的转让和许可，累积为企业带来了15亿左右的价值；</dd>
+        <dd>7.通过专利申请费用减免申请，累计为全国30000多家的客户节省了8亿左右的专利申报成本；</dd>
+
+    </dl>
 </section>
 
 <section class="aboutUs-content core-business grid-bg">
@@ -150,15 +158,15 @@
     <section class="container">
         <ul>
             <li>
-                <label>专利咨询</label>
+                <label>专利服务</label>
                 <p>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。</p>
             </li>
             <li>
-                <label>商标注册</label>
+                <label>商标服务</label>
                 <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
             </li>
             <li>
-                <label>版权登记</label>
+                <label>版权服务</label>
                 <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。</p>
             </li>
             <li>
