--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -138,7 +138,7 @@
         <dd>5.涉外商标授权率在96%，涉外专利授权量92%；</dd>
         <dd>6.累计辅助3400多家企业完成了26000多件专利、商标的转让和许可，累积为企业带来了15亿左右的价值；</dd>
         <dd>7.通过专利申请费用减免申请，累计为全国30000多家的客户节省了8亿左右的专利申报成本；</dd>
-
+    
     </dl>
 </section>
 
@@ -159,19 +159,19 @@
         <ul>
             <li>
                 <label>专利服务</label>
-                <p>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。</p>
+                <P>从中国制造到中国创造,<br/>为技术创新保驾护航,<br/>让创新，变成财富。 </P>
             </li>
             <li>
                 <label>商标服务</label>
-                <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
+                <p>从贴牌经营到自主品牌,<br/>为民族品牌添薪加柴,<br/>让商誉变成市场。</p>
             </li>
             <li>
                 <label>版权服务</label>
-                <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。</p>
+                <p>从抄袭成风到正版遍地,<br/>为文化艺术披荆斩棘,<br/>让艺术结合经济。 </p>
             </li>
             <li>
                 <label>项目申报</label>
-                <p>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。 </p>
+                <P>从中小微企业到做大做强，<br/>为国、省、市、区贡献发展，<br/>按政府导向，兴旺企业。</P>
             </li>
         </ul>
     </section>
