--- a/src/html/index.html
+++ b/src/html/index.html
@@ -138,8 +138,8 @@
                         <span>
                             <a href="servicePro/index.html" class="icon-Q" title="专利咨询"></a>
                         </span>
-                        <strong>专利咨询</strong>
-                        <P>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。 </P>
+                        <strong>专利服务</strong>
+                        <P>从中国制造到中国创造,<br/>为技术创新保驾护航,<br/>让创新，变成财富。 </P>
                     </div>
                 </li>
                 <li>
@@ -147,8 +147,8 @@
                         <span>
                             <a href="servicePro/brandRegist.html" class="icon-C" title="商标注册"></a>
                         </span>
-                        <strong>商标注册</strong>
-                        <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
+                        <strong>商标服务</strong>
+                        <p>从贴牌经营到自主品牌,<br/>为民族品牌添薪加柴,<br/>让商誉变成市场。</p>
                     </div>
                 </li>
                 <li>
@@ -156,8 +156,8 @@
                          <span>
                              <a href="servicePro/copyright.html" class="icon-P" title="版权登记"></a>
                         </span>
-                        <strong>版权登记</strong>
-                        <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。 </p>
+                        <strong>版权服务</strong>
+                        <p>从抄袭成风到正版遍地,<br/>为文化艺术披荆斩棘,<br/>让艺术结合经济。 </p>
                     </div>
                 </li>
                 <li>
@@ -166,7 +166,7 @@
                             <a href="servicePro/projectApplication.html" class="icon-E" title="项目申报"></a>
                         </span>
                         <strong>项目申报</strong>
-                        <P>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。</P>
+                        <P>从中小微企业到做大做强，<br/>为国、省、市、区贡献发展，<br/>按政府导向，兴旺企业。</P>
                     </div>
                 </li>
             </ul>
