--- a/src/html/servicePro/brandRegist.html
+++ b/src/html/servicePro/brandRegist.html
@@ -120,7 +120,7 @@
                 商标项目服务
                 <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>线上线下相结合，为客户带去更专业的服务，以最终成果促进知识产权行业的再次变革。</p>
+            <p>从贴牌经营到自主品牌,为民族品牌添薪加柴,让商誉变成市场。</p>
         </figure>
         <img src="../../img/earth2.png" alt="" class="earth">
     </section>
