--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -118,7 +118,7 @@
                 专利服务项目
                 <strong>始终如一的知识产权陪伴</strong>
             </figcaption>
-            <p>为客户提供专利服务的同时，为企业量身打造专属的知识产权规划方案，为客户创造最大财富。</p>
+            <P>从中国制造到中国创造,为技术创新保驾护航,让创新，变成财富。 </P>
         </figure>
         <img src="../../img/earth1.png" alt="" class="earth">
     </section>
@@ -129,10 +129,7 @@
         <section class="container">
             <section class="box">
                 <h3 class="f32">专利申请类型</h3>
-                <p class="f14">一项发明创造必须由申请人向政府部门（在中国,目前是中华人民共和 国国家知识产权局）提出专利申请，经中华人民共和国国家知识产权
-                    局依照法定程序审查批准后，才能取得专利权。专利证书包括三种类
-                    型，分别是：发明新型专利证书、实用新型专利证书和外观设计专利 证书。在申请阶段，分别称之为发明专利申请、实用新型专利申请和 外观设计专利申请。获得授权之后，分别称之为发明专利、实用新型
-                    专利和外观设计专利，此时，申请人就是相应专利的专利权人。</p>
+                <p class="f14">一项发明创造必须由申请人向政府部门（在中国,目前是中华人民共和国国家知识产权局）提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后，才能取得专利权。专利证书包括三种类型，分别是：发明新型专利证书、实用新型专利证书和外观设计专利证书。在申请阶段，分别称之为发明专利申请、实用新型专利申请和外观设计专利申请。获得授权之后，分别称之为发明专利、实用新型专利和外观设计专利，此时，申请人就是相应专利的专利权人。</p>
             </section>
         </section>
     </section>
