--- a/src/html/servicePro/projectApplication.html
+++ b/src/html/servicePro/projectApplication.html
@@ -120,7 +120,7 @@
                 项目申报
                 <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>深入了解客户发展需求，精准把握全国、省、市、区项目申报操作流程，以确保项目申报高成功率。</p>
+            <P>从中小微企业到做大做强，为国、省、市、区贡献发展，按政府导向，兴旺企业。</P>
         </figure>
         <img src="../../img/earth4.png" alt="" class="earth">
     </section>
