--- a/src/html/servicePro/copyright.html
+++ b/src/html/servicePro/copyright.html
@@ -119,7 +119,7 @@
                 版权服务
                 <strong>始终如一的知识产权陪伴 </strong>
             </figcaption>
-            <p>不论版权登记、许可、转让，或者相关法律纠纷处理，维正集团都能给客户最优质的服务。</p>
+            <p>从抄袭成风到正版遍地,为文化艺术披荆斩棘,让艺术结合经济。 </p>
         </figure>
         <img src="../../img/earth3.png" alt="" class="earth">
     </section>
