修改局部样式以及文案调整

--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -138,7 +138,9 @@
         <dd>5.涉外商标授权率在96%，涉外专利授权量92%；</dd>
         <dd>6.累计辅助3400多家企业完成了26000多件专利、商标的转让和许可，累积为企业带来了15亿左右的价值；</dd>
         <dd>7.通过专利申请费用减免申请，累计为全国30000多家的客户节省了8亿左右的专利申报成本；</dd>
-    
+        <dd>8.累计为全国30000多家免费申报专利授权补助申请，领取补助金额超17亿；</dd >
+        <dd>9.律师团队总共辅助1000多家企业进行了主动维权打假，代理原、被告知识产权纠纷案件4000多件，累计为企业挽回6亿多的损失；</dd >
+        <dd>10.在全国为23000多家企业申报政府政策项目，累计帮助企业拿到政府补助资金115亿，荣誉项目45000多项。</dd >
     </dl>
 </section>
 
@@ -151,7 +153,8 @@
                 <strong class="tip">倾心打造四大核心业务</strong>
             </span>
         </figcaption>
-        <p>紧扣知识产权大时代背景，承载多年在知识产权领域的丰富经验，依托人才精英团队，打造专利服务、商标服务、版权服务、项目申报、维权诉讼五大核心业务，旨于提升全天下企业的核心竞争力！
+        <p>
+            在知识产权大时代的背景下，凭借多年在知识产权领域为众多企业提供知识产权服务所积累的丰富经验，<br/>依托于庞大的实践型精英团队、倾力打造专利服务、商标服务、版权服务、项目申报四大核心业务，旨于提升全天下企业的核心竞争力！
         </p>
     </figure>
     
