--- a/src/html/index.html
+++ b/src/html/index.html
@@ -129,7 +129,7 @@
             <figcaption>
                 <h3>服务项目·精益求精</h3>
             </figcaption>
-            <p>做一家受人尊敬的百年企业！ </p>
+            <p>做一家受众人尊敬的百年企业！！ </p>
         </figure>
         <section class="service-list">
             <ul class="clearfix">
