--- a/src/html/joinUs/index.html
+++ b/src/html/joinUs/index.html
@@ -116,8 +116,8 @@
                 <em></em>
                 简历投递邮箱：
             </label>
-            <a href="mailto:szweizheng@yeah.net">
-                szweizheng@yeah.net
+            <a href="mailto:shenzhenweizheng@chinaweizheng.com">
+                shenzhenweizheng@chinaweizheng.com
             </a>
         </span>
     </section>
