--- a/src/html/newsCenter/index.html
+++ b/src/html/newsCenter/index.html
@@ -101,7 +101,10 @@
     <section class="container clearfix">
         <section class="currentMode fl">
             <h4>informa<i>tion</i></h4>
-            <span><b>资讯中心</b><strong>这里象征着我们的态度和实力</strong></span>
+            <span>
+                <b>资讯中心</b>
+                <!--<strong>这里象征着我们的态度和实力</strong>-->
+            </span>
         </section>
         <menu class="tab fr">
             <ul>
