--- a/src/html/servicePro/index.html
+++ b/src/html/servicePro/index.html
@@ -129,14 +129,19 @@
         <section class="container">
             <section class="box">
                 <h3 class="f32">专利申请类型</h3>
-                <p class="f14">一项发明创造必须由申请人向政府部门（在中国,目前是中华人民共和国国家知识产权局）提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后，才能取得专利权。专利证书包括三种类型，分别是：发明新型专利证书、实用新型专利证书和外观设计专利证书。在申请阶段，分别称之为发明专利申请、实用新型专利申请和外观设计专利申请。获得授权之后，分别称之为发明专利、实用新型专利和外观设计专利，此时，申请人就是相应专利的专利权人。</p>
+                <p>
+                    申请人向中华人民共和国国家知识产权局提出专利申请，经中华人民共和国国家知识产权局依照法定程序审查批准后，才能取得专利权。在中国，专利分为三种，分别是发明专利，实用新型专利和外观专利。</p>
+                <p>    发明专利的审查周期通常为1.5-3年，最长保护期限是20年；需要经过实质审查，从申请到拿到发明证书，期间产生的官费为4605元，并且需要在授权后缴纳每一年的年费；。</p>
+                <p>   实用新型专利的审查周期通常为5-7个月，最长保护期限是10年；采用初步审查制度，从申请到拿到发明证书，期间产生的官费为1305元，并且需要在授权后缴纳每一年的年费；
+                外观专利的审查周期通常为5-7个月，最长保护期限是10年；采用初步审查制度，从申请到拿到发明证书，期间产生的官费为1305元，并且需要在授权后缴纳每一年的年费。
+                </p>
             </section>
         </section>
     </section>
     
     <!--专利服务流程-->
     <section class="service-flow container">
-        <h3 class="text-center f24">专利服务流程<span class="block f14">简单的事情客户做 把复杂留给维正</span></h3>
+        <h3 class="text-center f24">专利服务流程<span class="block f14">把复杂留给维正</span></h3>
         <dl>
             <dt><em class="flow1"></em>我是客户</dt>
             <dd><i>01</i>维正与您签订保密协议</dd>
