添加响应式样式hack
现在还差头部导航，
“联系我们”两块页面

--- a/src/html/joinUs/index.html
+++ b/src/html/joinUs/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css"/>
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -92,7 +93,7 @@
 </header>
 
 <!--Banner-->
-<section class="cases-banner">
+<section class="banner">
     <img src="../../img/focusImg/banner-5.png" class="response-img" alt="">
 </section>
 
