--- a/src/html/servicePro/brandRegist.html
+++ b/src/html/servicePro/brandRegist.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <title>服务项目-商标注册</title>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    
+    <!--<meta name="viewport" content="width=640,user-scalable=no" />-->
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css"/>
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -90,10 +93,8 @@
 </header>
 
 <!--Banner-->
-<section id="sv-banner">
-    <a href="#">
+<section   class="banner">
         <img src="../../img/focusImg/banner-1.png" class="response-img" alt="">
-    </a>
 </section>
 
 <!--Content-->
@@ -225,6 +226,9 @@
                 </li>
             </ul>
         </section>
+        <aside class="replace" style="display:none" >
+            <img src="../../img/zhuanli.png" alt="" class="response-img">
+        </aside>
     </section>
 </article>
 
