--- a/src/html/aboutUs/index.html
+++ b/src/html/aboutUs/index.html
@@ -10,6 +10,8 @@
     <meta name="apple-mobile-web-app-capable" content="no"/>
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+    
+    <link rel="stylesheet" type="text/css" href="../../css/respond-hack.css"/>
     <!--[if lt IE 9]>
     <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
