--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>维正集团-首页</title>
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=0.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords"
@@ -16,6 +16,7 @@
     <meta name="renderer" content="webkit">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/respond-hack.css"/>
     <!--[if lt IE 9]>
     <script src="http://cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
     <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
@@ -727,7 +728,7 @@
             <li><a href="foolishBird/index.html" class="icon-fb">傻鸟知服</a></li>
             <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3494284187&site=qq&menu=yes" class="icon-qq">QQ咨询</a>
             </li>
-            <li><a href="#" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
+            <li><a href="tel:400-6063708" class="icon-tel">24小时热线</a><span class="tip">400-6063708</span></li>
             <li><a href="#" class="icon-wechat">官方微信</a><span class="qrcode"><img src="../img/qrcode.png"></span></li>
         </ul>
     </section>
