响应式hack基本完成

--- a/src/html/foolishBird/index.html
+++ b/src/html/foolishBird/index.html
@@ -90,6 +90,25 @@
             </li >
         </ul >
     </nav >
+    
+    <!--响应菜单-->
+    <menu class="response-menu" >
+        <ul >
+            <li ><a href="../index.html" >维正首页</a ></li >
+            <li ><a href="../servicePro/index.html" > 专利服务</a ></li >
+            <li ><a href="../servicePro/brandRegist.html" > 商标服务</a ></li >
+            <li ><a href="../servicePro/copyright.html" > 版权服务</a ></li >
+            <li ><a href="../servicePro/projectApplication.html" > 项目服务</a ></li >
+            <li ><a href="../foolishBird/index.html" >傻鸟知服</a ></li >
+            <li ><a href="../newsCenter/index.html" >资讯中心</a ></li >
+            <li ><a href="../aboutUs/index.html" >关于我们</a ></li >
+            <li ><a href="../joinUs/index.html" >诚聘英才</a ></li >
+            <li ><a href="../contactUs/index.html" >联系我们</a ></li >
+        </ul >
+    </menu >
+    <div class="nav-toggle" >
+        <div class="icon" ></div >
+    </div >
 </header >
 
 <!--Content-->
